Get sure fast typing work!

BUG: 321967
CCBUG: 316552
REVIEW: 115223
REVIEWED-BY: adjam
(PS: Many thanks for this, Mikhail...)